# web-perf-tools

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  results.ipynb
tests/: conftest.py  test_web_performance.py
